ui: Improve unstaged listview.

--- a/windows/PhotobookUI/TableContentPage.xaml
+++ b/windows/PhotobookUI/TableContentPage.xaml
@@ -282,8 +282,9 @@
                               ScrollViewer.HorizontalScrollMode="Enabled"
                               ScrollViewer.HorizontalScrollBarVisibility="Visible"
                               ScrollViewer.IsHorizontalRailEnabled="True"
-                              SelectionMode="Multiple"
+                              SelectionMode="Extended"
                               SelectionChanged="onStagedListViewSelectionChanged"
+                              HorizontalAlignment="Stretch"
                               AllowDrop="True"
                               CanDragItems="True"
                               CanReorderItems="False"
@@ -305,7 +306,7 @@
                                                                    FocusBorderBrush="{ThemeResource ListViewItemFocusBorderBrush}"
                                                                    FocusSecondaryBorderBrush="{ThemeResource ListViewItemFocusSecondaryBorderBrush}"
                                                                    PlaceholderBackground="Green"
-                                                                   PointerOverBackground="{StaticResource ButtonBackgroundColor}"
+                                                                   PointerOverBackground="White"
                                                                    PointerOverForeground="White"
                                                                    SelectedBackground="{StaticResource ButtonBackgroundColor}"
                                                                    SelectedForeground="White"
