ui: Add window resize callback.

--- a/windows/PhotobookUI/TableContentPage.xaml
+++ b/windows/PhotobookUI/TableContentPage.xaml
@@ -7,7 +7,8 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:canvas="using:Microsoft.Graphics.Canvas.UI.Xaml"
       xmlns:winui="using:Microsoft.UI.Xaml.Controls"
-      mc:Ignorable="d">
+      mc:Ignorable="d"
+      SizeChanged="OnTableContentSizeChanged">
     <Page.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
