--- a/windows/PhotobookUI/FirstPage.xaml
+++ b/windows/PhotobookUI/FirstPage.xaml
@@ -36,21 +36,15 @@
                       Grid.Column="1"
                       Name="ProjectsListView"
                       RightTapped="OnListViewRightTapped"
-                      Tapped="OpenProjectClicked"
+                      ItemClick="OpenProjectClicked"
+                      IsItemClickEnabled="True"
                       SelectionMode="None">
                 <ListView.ItemTemplate>
                     <DataTemplate x:DataType="local:ProjectItem">
-                        <Grid VerticalAlignment="Center">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*" />
-                            </Grid.ColumnDefinitions>
-                            <Button Grid.Column="0"
-                                    Content="{x:Bind Name}"
-                                    Background="{StaticResource ButtonBackgroundColor}"
-                                    Foreground="#FFFFFF"
-                                    Width="100"
-                                    Height="100" />
-                        </Grid>
+                        <TextBlock Text="{x:Bind Name}"
+                                   Foreground="#FFFFFF"
+                                   Width="100"
+                                   Height="100" />
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
