--- a/windows/PhotobookUI/TableContentPage.xaml
+++ b/windows/PhotobookUI/TableContentPage.xaml
@@ -84,10 +84,12 @@
                          Grid.Column="2"
                          Margin="0,0,20,0" />
                 <ComboBox x:Name="PaperComboBox"
-                          Grid.Column="3">
+                          Grid.Column="3"
+                          SelectionChanged="OnPaperComboBoxSelected">
                     <ComboBoxItem Content="A4, 300 ppi" />
                     <ComboBoxItem Content="A5, 300 ppi" />
                     <ComboBoxItem Content="A3, 300 ppi" />
+                    <ComboBoxItem Content="Custom" />
                 </ComboBox>
             </Grid>
         </Grid>
