dev: Change gallery image when staged images are selected.

--- a/windows/PhotobookUI/TableContentPage.xaml
+++ b/windows/PhotobookUI/TableContentPage.xaml
@@ -236,7 +236,7 @@
                                   AllowDrop="True"
                                   Drop="OnDropIntoStagedListView"
                                   DragOver="OnDragOverStagedListView"
-                                  SelectionMode="Extended"
+                                  SelectionMode="Single"
                                   SelectionChanged="onStagedListViewSelectionChanged"
                                   Background="{StaticResource PrimaryColor}">
                             <ListView.ItemContainerStyle>
